welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:7: error: ')' expected but 'if' found.
  if else((40<=a && a<=50)&& (40<=b && b<=50))){
  ^in3050:7: error: illegal start of simple expression
  if else((40<=a && a<=50)&& (40<=b && b<=50))){
                                              ^